# orchard

./: Cargo.toml
dev/bench/: data.js
proptest-regressions/: keys.txt
src/: action.rs  address.rs  bit_string_88.rs  builder.rs  bundle.rs  circuit.rs  constants.rs  hww.rs  hww_utils.rs  keys.rs  lib.rs  note.rs  note_encryption.rs  primitives.rs  spec.rs  test_vectors.rs  tree.rs  value.rs  zip32.rs
src/bundle/: commitments.rs
src/circuit/: gadget.rs
src/circuit/gadget/: ecc.rs  poseidon.rs  sinsemilla.rs  utilities.rs
src/circuit/gadget/ecc/: chip.rs
src/circuit/gadget/ecc/chip/: add.rs  add_incomplete.rs  mul.rs  mul_fixed.rs  witness_point.rs
src/circuit/gadget/ecc/chip/mul/: complete.rs  incomplete.rs  overflow.rs
src/circuit/gadget/ecc/chip/mul_fixed/: base_field_elem.rs  full_width.rs  short.rs
src/circuit/gadget/poseidon/: pow5t3.rs
src/circuit/gadget/sinsemilla/: chip.rs  commit_ivk.rs  merkle.rs  message.rs  note_commit.rs
src/circuit/gadget/sinsemilla/chip/: generator_table.rs  hash_to_point.rs
src/circuit/gadget/sinsemilla/merkle/: chip.rs
src/circuit/gadget/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs
src/constants/: load.rs  util.rs
src/keys/: no_alloc_fpe.rs
src/note/: commitment.rs  nullifier.rs
src/primitives/: poseidon.rs  redpallas.rs  sinsemilla.rs
src/primitives/poseidon/: grain.rs  mds.rs  nullifier.rs  test_vectors.rs
src/primitives/sinsemilla/: addition.rs  constants.rs  sinsemilla_s.rs
src/spec/: prf_expand.rs
src/test_vectors/: commitment_tree.rs  keys.rs  merkle_path.rs  note_encryption.rs
