[package]
name = "orchard"
version = "0.0.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2018"
description = "Sapling on stilts!"
license-file = "LICENSE-BOSL"
repository = "https://github.com/zcash/orchard"
documentation = "https://docs.rs/orchard"
readme = "README.md"

# We are not publishing this yet.
publish = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
aes = {version = "0.7", default-features = false }
arrayvec = { version = "0.7.0", default-features = false }
bigint = { version = "4", default-features = false }
bitvec = { version = "0.22", default-features = false }
blake2b_simd = { version = "0.5", default-features = false }
ff = { version = "0.11", default-features = false }
fpe = { version = "0.5", default-features = false }
group = { version = "0.11", default-features = false }
halo2 = { version = "=0.1.0-beta.1", optional = true}
lazy_static = { version = "1", optional = true }
memuse = { version = "0.2", features = ["nonempty"], optional = true }
# TODO: waiting for no_std + alloc version of pasta_curves from @str4d
pasta_curves = { git = "https://github.com/jarys/pasta_curves.git", branch="no-std" }
proptest = { version = "1.0.0", optional = true }
rand = { version = "0.8", default-features = false }
nonempty = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
subtle = { version = "2.3", default-features = false }
# TODO: zcash_note_encryption is not no_std
zcash_note_encryption = { path = "/home/agi/code/librustzcash/components/zcash_note_encryption", optional = true }
incrementalmerkletree = { version = "0.1", optional = true }

no-std-compat = "0.4.1"

# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }

[dependencies.reddsa]
git = "https://github.com/str4d/redjubjub.git"
rev = "416a6a8ebf8bd42c114c938883016c04f338de72"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"
proptest = "1.0.0"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.5", features = ["criterion", "flamegraph"] }

[lib]
bench = false

[features]
default = ["std"]
dev-graph = ["halo2/dev-graph", "plotters"]
test-dependencies = ["proptest"]
alloc = ["no-std-compat/alloc"]
# TODO: do we really need all default features ?
std = ["arrayvec/std", "bigint/std", "bitvec/std",
       "blake2b_simd/std", "ff/bits", "ff/std",
       "fpe/alloc", "group/alloc", "halo2",
       "lazy_static", "memuse", "rand/std",
       "rand/std_rng", "nonempty", "subtle/std",
       "subtle/i128", "zcash_note_encryption",
       "incrementalmerkletree", "alloc"]

[[bench]]
name = "note_decryption"
harness = false

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "small"
harness = false

[[bench]]
name = "circuit"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

[patch.crates-io]
zcash_note_encryption = { git = "https://github.com/zcash/librustzcash.git", rev = "13b023387bafdc7b5712c933dc0e16ee94b96a6a" }
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree.git", rev = "b7bd6246122a6e9ace8edb51553fbf5228906cbb" }
