[package]
name = "orchard"
version = "0.0.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2018"
description = "Sapling on stilts!"
license-file = "LICENSE-BOSL"
repository = "https://github.com/zcash/orchard"
documentation = "https://docs.rs/orchard"
readme = "README.md"

# We are not publishing this yet.
publish = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
aes = {version = "0.7", default-features = false }
arrayvec = { version = "0.7.0", default-features = false }
bitvec = { version = "0.22", default-features = false }
blake2b_simd = { version = "0.5", default-features = false }
ff = { version = "0.11", default-features = false, features = ["bits"] }
# TODO: waiting for #21 approval
#fpe = { version = "0.5", default-features = false }
fpe = { git = "https://github.com/jarys/fpe.git", branch = "real-no-std" }
group = { version = "0.11", default-features = false }
memuse = { version = "0.2", features = ["nonempty"], optional = true }
# TODO: waiting for no_std + alloc version of pasta_curves from @str4d
#pasta_curves = "0.2.1"
pasta_curves = { git = "https://github.com/jarys/pasta_curves.git", branch="alloc", default-features = false, features = ["bits"] }
#pasta_curves = { path = "/home/agi/code/pasta_curves" }
# TODO: waiting for no-std support PR approval
#zcash_note_encryption = { version = "0.0", default-features = false }
zcash_note_encryption = { git = "https://github.com/jarys/librustzcash.git", branch = "no-std-note-encryption", default-features = false }
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.5", default-features = false }
nonempty = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
subtle = { version = "2.3", default-features = false }

# alloc dependencies
lazy_static = { version = "1", optional = true }

# std dependencies
halo2 = { version = "=0.1.0-beta.1", optional = true}
incrementalmerkletree = { version = "0.1", optional = true }

# test dependencies
proptest = { version = "1.0.0", optional = true } # TODO: remove duplicate

# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }

# TODO: waiting for new version of reddsa
#reddsa = { git = "https://github.com/jarys/no_std_redpallas.git", branch = "main" }
reddsa = { path = "/home/agi/code/no_std_redpallas" }
#[dependencies.reddsa]
#git = "https://github.com/str4d/redjubjub.git"
#rev = "416a6a8ebf8bd42c114c938883016c04f338de72"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"
proptest = "1.0.0"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.5", features = ["criterion", "flamegraph"] }

[lib]
bench = false

[features]
default = ["std"]
alloc = ["group/alloc", "lazy_static",
         "pasta_curves/alloc", "zcash_note_encryption/alloc",
         "fpe/alloc"]
# TODO: do we really need all default features ?
std = ["arrayvec/std", "bitvec/std",
       "blake2b_simd/std", "ff/bits", "ff/std",
       "halo2",
       "memuse", "rand/std",
       "rand/std_rng", "nonempty", "subtle/std",
       "subtle/i128",
       "incrementalmerkletree", "alloc"]
dev-graph = ["halo2/dev-graph", "plotters"]
test-dependencies = ["proptest"]

[[bench]]
name = "note_decryption"
harness = false

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "small"
harness = false

[[bench]]
name = "circuit"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

[patch.crates-io]
#zcash_note_encryption = { git = "https://github.com/zcash/librustzcash.git", rev = "13b023387bafdc7b5712c933dc0e16ee94b96a6a" }
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree.git", rev = "b7bd6246122a6e9ace8edb51553fbf5228906cbb" }
